--- a/Task-JUN-14/Task 5.html
+++ b/Task-JUN-14/Task 5.html
@@ -10,9 +10,9 @@
     <hr>
     <h2>Malek sawalha</h2>
     <p>I’m a Full stack web development Trainee at Orange Coding Academy</p>
-    <a href="https://www.facebook.com/profile.php?id=100003204412380" target="_blank">facebook in new window</a>
+    <a href="https://www.facebook.com/profile.php?id=100003204412380" target="_blank">My facebook page</a>
     <br>
-    <a href="https://www.instagram.com/mk_sawalha/">instagram in the same window</a>
-    <p>my hobbies are reading and coding</p>
+    <a href="https://www.instagram.com/mk_sawalha/">My instagram page</a>
+    <p>My hobbies are reading and coding</p>
 </body>
 </html>
