--- a/Task- JUN-15/Task2.html
+++ b/Task- JUN-15/Task2.html
@@ -21,16 +21,16 @@
 
 <tr>
 <td><img src="./images/National-Horse-Day-1-1200x834.jpg" alt="horse" width="400px"></td>
-<td><a href="https://en.wikipedia.org/wiki/Horse" target="_blank">Horse</a></td>
+<td><a href="https://en.wikipedia.org/wiki/Horse" target="_blank">Horses</a></td>
 </tr>
 
 <tr>
 <td><img src="./images/b25lY21zOmRmYmExYzE4LTZhY2ItNDBkZS1iMTU1LWY4YTVlZWNmYTdkYzowOTcxZDZlOC00MDc1LTQzYzItOWEyOC00YjNlNzFiY2Y1YzI=.jpg" alt="Dog" width="400px"></td>
-<td><a href="https://en.wikipedia.org/wiki/Dog" target="_blank">Gog</a></td>
+<td><a href="https://en.wikipedia.org/wiki/Dog" target="_blank">Gogs</a></td>
 </tr>
 <tr>
 <td><img src="./images/Cat_August_2010-4.jpg" alt="cat" width="400px"></td>
-<td><a href="https://en.wikipedia.org/wiki/Cat" target="_blank">Cat</a></td>
+<td><a href="https://en.wikipedia.org/wiki/Cat" target="_blank">Cats</a></td>
 </tr>
 
 </table>
