--- a/Task- JUN-15/Task1.html
+++ b/Task- JUN-15/Task1.html
@@ -17,7 +17,7 @@
 <ol>
 <li>Nested Item2.1</li>
 <li>Nested Item2.2
-<ul style="list-style-type: circle;">
+<ul type="circle">
     <li>Nested Item2.2.1</li>
     <li>Nested Item2.2.2
 <ul>
@@ -32,7 +32,7 @@
 </ol>
 </li>
 <li>List Item 3
-<ul>
+<ul style="list-style-type: disc;">
 <li>Nested Item3.1</li>
 <li>Nested Item3.2</li>
 <li>Nested Item3.3</li>
