--- a/Task-JUN-18/Task1.html
+++ b/Task-JUN-18/Task1.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 <h1>Registration Form !</h1>
+<fieldset style="width: 40%;" >
 
+<form action=""method="post" id="form1">
 
-<form action=""method="get" id="form1">
-
-
+<br>
     <h2>Personal details</h2>
 <hr><br>
 
@@ -44,7 +44,7 @@
 
 </form>
 
-
+</fieldset>
 
 
 
