--- a/Task-JUN-18/Task3.html
+++ b/Task-JUN-18/Task3.html
@@ -1,61 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Basic HTML Form</h1>
-<br>
+    <br />
 
-<form action="">
-    <fieldset>
+    <form action="">
+      <fieldset>
         <legend>Name</legend>
-<label for="fname">First Name</label><br>
-<input type="text" id="fname" name="fname">
-<br><br>
-<label for="lname">Last Name</label><br>
-<input type="text" id="lname" name="lname">
-</fieldset>
+        <label for="fname">First Name</label><br />
+        <input type="text" id="fname" name="fname" />
+        <br /><br />
+        <label for="lname">Last Name</label><br />
+        <input type="text" id="lname" name="lname" />
+      </fieldset>
 
-<fieldset>
-    <legend>Other Question</legend>
-<br>
-<label for="drink">Choose a drink:</label><br>
-<input type="radio" id="coffee" name="drink" value="coffee">
-<label for="male">coffee</label><br>
-<input type="radio" id="tea" name="drink" value="tea">
-<label for="female">tea</label><br>
-<input type="radio" id="hot chocolate" name="gender" value="hot chocolate">
-<label for="female">Hot chocolate</label>
-<br><br>
-<p>What ice cream do you like?</p>
-<input type="checkbox" id="chocolate" name="chocolate" value="chocolate">
-<label for="chocolate">Chocolate</label><br>
-<input type="checkbox" id="chocolate pudding" value="chocolate pudding">
-<label for="chocolate pudding">Chocolate pudding</label><br>
-<input type="checkbox" id="chocolate peanut butter" name="chocolate peanut butter" value="chocolate peanut butter">
-<label for="chocolate peanut butter">Chocolate Peanut Butter</label><br>
-<input type="checkbox" id="vanilla" name="vanilla" value="vanilla">
-<label for="vanilla">Vanilla</label><br>
-<input type="checkbox" id="strawberry" name="strawberry" value="strawberry">
-<label for="strawberry">Strawberry</label>
-<br><br>
-<label for="option">Select a school:</label><br>
-<select name="school" id="school">
-    <option value="harvard">Harvard</option>
-    <option value="hedeen">Hedeen</option>
-    <option value="yarmouk">Yarmouk</option>
-    </select>
-    <br><br>
-    <label for="comment">Please provide comments:</label><br>
-<textarea name="comment" id="comment" cols="45" rows="8"></textarea>
-
-</fieldset>
-<br>
-<input type="submit" name="Submit">
-
-</form>
-</body>
+      <fieldset>
+        <legend>Other Question</legend>
+        <br />
+        <label for="drink">Choose a drink:</label><br />
+        <input type="radio" id="coffee" name="drink" value="coffee" />
+        <label for="male">coffee</label><br />
+        <input type="radio" id="tea" name="drink" value="tea" />
+        <label for="female">tea</label><br />
+        <input
+          type="radio"
+          id="hot chocolate"
+          name="gender"
+          value="hot chocolate"
+        />
+        <label for="female">Hot chocolate</label>
+        <br /><br />
+        <p>What ice cream do you like?</p>
+        <input
+          type="checkbox"
+          id="chocolate"
+          name="chocolate"
+          value="chocolate"
+        />
+        <label for="chocolate">Chocolate</label><br />
+        <input
+          type="checkbox"
+          id="chocolate pudding"
+          value="chocolate pudding"
+        />
+        <label for="chocolate pudding">Chocolate pudding</label><br />
+        <input
+          type="checkbox"
+          id="chocolate peanut butter"
+          name="chocolate peanut butter"
+          value="chocolate peanut butter"
+        />
+        <label for="chocolate peanut butter">Chocolate Peanut Butter</label
+        ><br />
+        <input type="checkbox" id="vanilla" name="vanilla" value="vanilla" />
+        <label for="vanilla">Vanilla</label><br />
+        <input
+          type="checkbox"
+          id="strawberry"
+          name="strawberry"
+          value="strawberry"
+        />
+        <label for="strawberry">Strawberry</label>
+        <br /><br />
+        <label for="option">Select a school:</label><br />
+        <select name="school" id="school">
+          <option value="harvard">Harvard</option>
+          <option value="hedeen">Hedeen</option>
+          <option value="yarmouk">Yarmouk</option>
+        </select>
+        <br /><br />
+        <label for="comment">Please provide comments:</label><br />
+        <textarea name="comment" id="comment" cols="45" rows="8"></textarea>
+      </fieldset>
+      <br />
+      <input type="submit" name="Submit" />
+    </form>
+  </body>
 </html>
