--- a/Task-JUN-18/Task2.html
+++ b/Task-JUN-18/Task2.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div align="center">
     <h1>Employee Interests Survey Form</h1>
 <br>
 <form action="" id="form1">
@@ -38,7 +39,7 @@
 <input type="checkbox" id="magazines" name="magazines" value="magazines">
 <label for="magazines">Magazines</label>
 <br>
-
+<br>
 <label for="option">What genre of movies do you like?</label>
 <select name="movies" id="movies">
     <option value="comedy">comedy</option>
@@ -50,6 +51,6 @@
 <button type="submit" value="submit" form="form1">Submit form</button>
 
 </form>
-
+</div>
 </body>
 </html>
