--- a/Task-JUN-18/Task2.html
+++ b/Task-JUN-18/Task2.html
@@ -36,7 +36,7 @@
 <label for="online resources">Online resources</label>
 <input type="checkbox" id="phone apps" name="phone apps" value="phone apps">
 <label for="phone apps">Phone apps</label>
-<input type="checkbox" id="magazines" name="magazines" value="magazines">
+<input type="checkbox" id="magazines" name="magazines" value="magazines" checked>
 <label for="magazines">Magazines</label>
 <br>
 <br>
