--- a/Task-JUN-18/Task3.html
+++ b/Task-JUN-18/Task3.html
@@ -24,14 +24,15 @@
         <br />
         <label for="drink">Choose a drink:</label><br />
         <input type="radio" id="coffee" name="drink" value="coffee" />
-        <label for="male">coffee</label><br />
-        <input type="radio" id="tea" name="drink" value="tea" />
-        <label for="female">tea</label><br />
+        <label for="coffee">coffee</label><br />
+        <input type="radio" id="tea" name="drink" value="tea" checked/>
+        <label for="tea">tea</label><br />
         <input
           type="radio"
           id="hot chocolate"
           name="gender"
           value="hot chocolate"
+          
         />
         <label for="female">Hot chocolate</label>
         <br /><br />
@@ -54,6 +55,7 @@
           id="chocolate peanut butter"
           name="chocolate peanut butter"
           value="chocolate peanut butter"
+          checked
         />
         <label for="chocolate peanut butter">Chocolate Peanut Butter</label
         ><br />
